@@ -8,6 +8,8 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.finrem.caseorchestration.mapper.tabdata.managehearings.HearingTabDataMapper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseDocument;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DynamicList;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DynamicListElement;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DynamicMultiSelectList;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DynamicMultiSelectListElement;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.FinremCaseDetails;
@@ -15,6 +17,9 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.YesOrNo;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.managehearings.Hearing;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.managehearings.HearingType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.managehearings.ManageHearingsCollectionItem;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.managehearings.PartyOnCase;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.managehearings.PartyOnCaseCollection;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.managehearings.WorkingHearing;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.managehearings.tabs.HearingTabCollectionItem;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.managehearings.tabs.HearingTabItem;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.wrapper.ManageHearingsWrapper;
@@ -55,16 +60,38 @@ class ManageHearingActionServiceTest {
 
     private FinremCaseDetails finremCaseDetails;
     private ManageHearingsWrapper hearingWrapper;
-    private Hearing hearing;
+    private WorkingHearing workingHearing;
 
     @BeforeEach
     void setUp() {
-        hearing = createHearing(HearingType.DIR, "10:00", "30mins", LocalDate.now());
-        hearingWrapper = ManageHearingsWrapper.builder().workingHearing(hearing).build();
+        workingHearing = createWorkingHearing(LocalDate.now());
+        hearingWrapper = ManageHearingsWrapper.builder().workingHearing(workingHearing).build();
         finremCaseDetails = FinremCaseDetails.builder()
             .data(uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.FinremCaseData.builder()
                 .manageHearingsWrapper(hearingWrapper)
                 .build())
+            .build();
+    }
+
+    private WorkingHearing createWorkingHearing(LocalDate date) {
+        return WorkingHearing.builder()
+            .hearingTypeDynamicList(DynamicList.builder()
+                .value(DynamicListElement.builder()
+                    .code(HearingType.DIR.name())
+                    .label(HearingType.DIR.getId())
+                    .build())
+                .build())
+            .partiesOnCaseMultiSelectList(DynamicMultiSelectList.builder()
+                .value(List.of(
+                    DynamicMultiSelectListElement.builder()
+                        .code("[APPSOLICITOR]")
+                        .label("Applicant Solicitor - Hamzah")
+                        .build()
+                ))
+                .build())
+            .hearingDate(date)
+            .hearingTime("10:00")
+            .hearingTimeEstimate("30mins")
             .build();
     }
 
@@ -78,23 +105,28 @@ class ManageHearingActionServiceTest {
 
         assertThat(hearingWrapper.getHearings()).hasSize(1);
         assertThat(hearingWrapper.getHearingDocumentsCollection()).hasSize(1);
-        assertThat(hearingWrapper.getHearingDocumentsCollection().get(0).getValue().getHearingDocument())
+        assertThat(hearingWrapper.getHearingDocumentsCollection().getFirst().getValue().getHearingDocument())
             .isEqualTo(hearingNotice);
     }
 
     @Test
     void performAddHearing_shouldGenerateAllDocumentsForStandardFdaHearingType() {
-        hearing.setHearingType(HearingType.FDA);
+        workingHearing.setHearingTypeDynamicList(DynamicList.builder()
+            .value(DynamicListElement.builder()
+                .code(HearingType.FDA.name())
+                .label(HearingType.FDA.getId())
+                .build())
+            .build());
 
         CaseDocument formC = createCaseDocument("FormC.pdf", "http://example.com/form-c");
         CaseDocument formG = createCaseDocument("FormG.pdf", "http://example.com/form-g");
         CaseDocument outOfCourtResolution = createCaseDocument("OutOfCourtResolution.pdf",
             "http://example.com/OutOfCourtResolution");
 
-        Map<String, CaseDocument>  pfdNcdrDocuments = Map.of(
+        Map<String, CaseDocument> pfdNcdrDocuments = Map.of(
             PFD_NCDR_COMPLIANCE_LETTER, createCaseDocument("ComplianceLetter.pdf",
                 "http://example.com/compliance-letter"),
-            PFD_NCDR_COVER_LETTER,  createCaseDocument("CoverLetter.pdf",
+            PFD_NCDR_COVER_LETTER, createCaseDocument("CoverLetter.pdf",
                 "http://example.com/cover-letter"));
 
         when(manageHearingsDocumentService.generateFormC(finremCaseDetails,
@@ -121,17 +153,21 @@ class ManageHearingActionServiceTest {
 
     @Test
     void performAddHearing_shouldGenerateDocumentsForFdrHearingTypeWithExpressCase() {
-        hearing.setHearingType(HearingType.FDR);
-
+        workingHearing.setHearingTypeDynamicList(DynamicList.builder()
+            .value(DynamicListElement.builder()
+                .code(HearingType.FDR.name())
+                .label(HearingType.FDR.getId())
+                .build())
+            .build());
         CaseDocument formC = createCaseDocument("FormC.pdf", "http://example.com/form-c");
         CaseDocument formG = createCaseDocument("FormG.pdf", "http://example.com/form-g");
         CaseDocument outOfCourtResolution = createCaseDocument("OutOfCourtResolution.pdf",
             "http://example.com/OutOfCourtResolution");
 
-        Map<String, CaseDocument>  pfdNcdrDocuments = Map.of(
+        Map<String, CaseDocument> pfdNcdrDocuments = Map.of(
             PFD_NCDR_COMPLIANCE_LETTER, createCaseDocument("ComplianceLetter.pdf",
                 "http://example.com/compliance-letter"),
-            PFD_NCDR_COVER_LETTER,  createCaseDocument("CoverLetter.pdf",
+            PFD_NCDR_COVER_LETTER, createCaseDocument("CoverLetter.pdf",
                 "http://example.com/cover-letter"));
 
         when(manageHearingsDocumentService.generateFormC(finremCaseDetails,
@@ -160,16 +196,21 @@ class ManageHearingActionServiceTest {
 
     @Test
     void performAddHearing_shouldNotGenerateFormGForFastTrackApplication() {
-        hearing.setHearingType(HearingType.FDA);
+        workingHearing.setHearingTypeDynamicList(DynamicList.builder()
+            .value(DynamicListElement.builder()
+                .code(HearingType.FDA.name())
+                .label(HearingType.FDA.getId())
+                .build())
+            .build());
         finremCaseDetails.getData().setFastTrackDecision(YesOrNo.YES);
 
         CaseDocument formC = createCaseDocument("FormC.pdf", "http://example.com/form-c");
         CaseDocument outOfCourtResolution = createCaseDocument("OutOfCourtResolution.pdf",
             "http://example.com/OutOfCourtResolution");
-        Map<String, CaseDocument>  pfdNcdrDocuments = Map.of(
+        Map<String, CaseDocument> pfdNcdrDocuments = Map.of(
             PFD_NCDR_COMPLIANCE_LETTER, createCaseDocument("ComplianceLetter.pdf",
                 "http://example.com/compliance-letter"),
-            PFD_NCDR_COVER_LETTER,  createCaseDocument("CoverLetter.pdf",
+            PFD_NCDR_COVER_LETTER, createCaseDocument("CoverLetter.pdf",
                 "http://example.com/cover-letter"));
 
         when(manageHearingsDocumentService.generateFormC(finremCaseDetails,
@@ -198,26 +239,24 @@ class ManageHearingActionServiceTest {
     @Test
     void updateTabData_shouldAddHearingToTabCollectionInCorrectOrder() {
         Hearing hearing1 = createHearing(HearingType.DIR, "10:00", "30mins", LocalDate.of(2025, 7, 20));
-        hearing1.setPartiesOnCaseMultiSelectList(DynamicMultiSelectList
-            .builder()
-            .listItems(List.of(
-                DynamicMultiSelectListElement.builder()
+        hearing1.setPartiesOnCase(List.of(
+            PartyOnCaseCollection.builder()
+                .value(PartyOnCase.builder()
+                    .role(APPLICANT)
                     .label("Applicant")
-                    .code(APPLICANT)
-                    .build()))
-            .build()
-        );
+                    .build())
+                .build()
+        ));
 
         Hearing hearing2 = createHearing(HearingType.FDA, "11:00", "1hr", LocalDate.of(2025, 7, 15));
-        hearing2.setPartiesOnCaseMultiSelectList(DynamicMultiSelectList
-            .builder()
-            .listItems(List.of(
-                DynamicMultiSelectListElement.builder()
+        hearing2.setPartiesOnCase(List.of(
+            PartyOnCaseCollection.builder()
+                .value(PartyOnCase.builder()
+                    .role(RESPONDENT)
                     .label("Respondent")
-                    .code(RESPONDENT)
-                    .build()))
-            .build()
-        );
+                    .build())
+                .build()
+        ));
 
         hearingWrapper.setHearings(new ArrayList<>(List.of(
             createHearingCollectionItem(hearing2),
